完成了作者写作建议功能，给系统里配置了redis docker